# GMMAT

./: DESCRIPTION  LICENSE.note  NAMESPACE  README.md  cleanup  configure  configure.ac
R/: SMMAT.R  glmm.rvtests.R  glmm.score.R  glmm.wald.R  glmmkin.R
data/: example.rda
inst/: COPYRIGHTS
inst/doc/: GMMAT.R  GMMAT.Rnw
inst/extdata/: GRM.txt.bz2  SetID.withweights.txt  geno.bed  geno.bgen  geno.bim  geno.fam  geno.gds  geno.sample  geno.txt  geno.txt.bz2  meta1.txt  meta2.txt  meta3.txt  pheno.txt  pheno2.txt  plink1.bed  plink1.bim  plink1.fam  readme
man/: GMMAT-package.Rd  SMMAT.Rd  SMMAT.meta.Rd  example.Rd  glmm.rvtests.Rd  glmm.rvtests.meta.Rd  glmm.score.Rd  glmm.score.meta.Rd  glmm.wald.Rd  glmmkin.Rd
src/: Makevars  Makevars.in  Makevars.win  fitglmm.cpp  libdeflate.files  read_bgen.h  registerDynamicSymbol.c  symbols.rds  zstd.files
src/zstd/lib/common/: portability_macros.h
tests/: testthat.R
tests/testthat/: test_SMMAT.R  test_SMMAT.meta.R  test_glmm.score.R  test_glmm.score.meta.R  test_glmm.wald.R  test_glmmkin.R
vignettes/: GMMAT.Rnw
